shelter/sass/style.css
/* ... */
.button_colored {
  background: #F1CDB3;
}

.button_bordered {
  border: 2px solid #F1CDB3;
}

.button_round {
  width: 52px;
  height: 52px;
  border: 2px solid #F1CDB3;
}

.button_big {
  width: 260px;
  height: 52px;
}

.button:hover {
  background: #FDDCC4;
}

.button_disabled {
  border: 2px solid #CDCDCD;
  color: #CDCDCD;
}

.button_disabled:hover {
  background: none;
  cursor: auto;
}

.logo {
  z-index: 10;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.logo_dark .logo__title {
  color: #545454;
}

.logo_dark .logo__subtitle {
  color: #292929;
}

.logo__title {
  margin: 0 0 10px;
}

.logo__subtitle {
  margin-left: 4px;
  font-family: 'Arial';
  font-style: normal;
  font-weight: 400;
  font-size: 1.3rem;
  line-height: 1.5rem;
  /* identical to box height */
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  letter-spacing: 0.1em;
  color: #FFFFFF;
}

.menu__icon::before, .menu__icon::after, .menu__line {
  content: "";
  position: absolute;
  left: 0;
  display: inline-block;
  background-color: #F1CDB3;
  height: 2px;
  width: 100%;
}

.menu__icon {
  display: none;
  z-index: 10;
  position: relative;
  width: 30px;
  height: 22px;
  cursor: pointer;
}

.menu__icon::before {
  top: 0;
}

.menu__icon::after {
  bottom: 0;
}

.menu__icon_dark::before {
  background-color: #000000;
}

.menu__icon_dark::after {
  background-color: #000000;
}

@media (max-width: 767px) {
  .menu__icon {
    display: block;
  }
}

.menu__icon_active {
  -webkit-transform: rotate(90deg);
          transform: rotate(90deg);
}

.menu__line {
  top: calc(50% - 1px);
}

.menu__line_dark {
  background-color: #000000;
}

.menu__body {
  z-index: 5;
  position: fixed;
  padding: 248px 38px 248px 39px;
  top: 0;
  right: -100%;
  width: 320px;
  height: 100%;
  background: #292929;
  -webkit-transition: right .5s ease-in 0s;
  transition: right .5s ease-in 0s;
  overflow: auto;
}

.menu__body_active {
  right: 0;
}

.menu__body_light {
  background: #FFFFFF;
}

.menu__dropout {
  z-index: 1;
  position: fixed;
  left: -100%;
  top: 0;
  width: calc(100% - 320px);
  height: 100%;
  background: rgba(41, 41, 41, 0.6);
  -webkit-transition: left .5s ease-in 0s;
  transition: left .5s ease-in 0s;
}

.menu__dropout_active {
  left: 0;
}

.menu__list {
  z-index: 10;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 40px;
}

.menu__link a {
  font-size: 3.2rem;
  line-height: 160%;
  font-style: normal;
  font-weight: 400;
  color: #CDCDCD;
  cursor: pointer;
}

.menu__link a:hover {
  color: #FAFAFA;
}

.menu__link_active {
  border-bottom: solid 3px #F1CDB3;
}

.menu__link_active a {
  color: #FAFAFA;
}

.menu__link_dark a {
  color: #545454;
}

.menu__link_dark a:hover {
  color: #292929;
}

.overlay {
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(41, 41, 41, 0.6);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  cursor: pointer;
}

.overlay:hover .modal__close-icon {
  background: #FDDCC4;
}

.modal {
  z-index: 10;
  position: relative;
  overflow: visible;
}

.modal:hover .modal__close-icon {
  background: none;
}

.modal:hover .modal__close-icon:hover {
  background: #FDDCC4;
}

.modal__content {
  position: relative;
  overflow: hidden;
  width: 900px;
  height: 500px;
  border-radius: 9px;
  background: #FAFAFA;
  -webkit-box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
          box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  cursor: auto;
}

@media (max-width: 1279px) {
  .modal__content {
    width: 630px;
    height: 350px;
  }
}

@media (max-width: 767px) {
  .modal__content {
    width: 240px;
    height: 341px;
  }
}

.modal__text {
  padding: 50px 20px 0 29px;
  overflow: auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 40px;
}

@media (max-width: 1279px) {
  .modal__text {
    padding: 10px 9px 0 11px;
    gap: 20px;
  }
}

@media (max-width: 767px) {
  .modal__text {
    padding: 10px 10px 10px 10px;
  }
}

.modal__image {
  width: 500px;
  height: 500px;
}

@media (max-width: 1279px) {
  .modal__image {
    width: 350px;
    height: 350px;
  }
}

@media (max-width: 767px) {
  .modal__image {
    display: none;
  }
}

.modal__title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 10px;
}

.modal__title h3 {
  color: #000000;
}

.modal__title h4 {
  color: #000000;
}

@media (max-width: 767px) {
  .modal__title {
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
}

.modal__paragraph {
  max-width: 350px;
  letter-spacing: 0.06em;
  color: #000000;
}

@media (max-width: 1279px) {
  .modal__paragraph {
    max-width: 260px;
    font-size: 1.3rem;
    line-height: 110%;
    font-style: normal;
    font-weight: 400;
  }
}

@media (max-width: 767px) {
  .modal__paragraph {
    max-width: 220px;
    text-align: justify;
  }
}
/* ... */

